[tool.poetry]
name = "dnsdb"
version = "0.1.0"
description = "A Python Client to interact with Farsight Security's DNSDB API"
authors = ["Gabriel Iovino <giovino@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
