[tool.poetry]
name = "dnsdb"
version = "0.1.2"
description = "Python client for Farsight Security's DNSDB API"
license = "MIT"
authors = ["Gabriel Iovino <giovino@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/giovino/fsi-dnsdb"
repository = "https://github.com/giovino/fsi-dnsdb"
keywords = ["security"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.21"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
